# tonuino-cards-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  pyproject.toml  release-please-config.json  renovate.json5  uv.lock.license
.github/: release.yml
.github/actions/poetrybuild/: action.yaml
.github/workflows/: publish.yaml  release-please.yaml  release-vulnerabilities.yaml  test.yaml
.reuse/: dep5
doc/: screencast.sh
tests/: __init__.py  conftest.py  test_card.py  test_config.py  test_helper.py  test_qrcode.py
tests/data/config/: error_cards_empty_source_list_entry.yaml  error_cards_empty_string_source.yaml  error_cards_invalid_mode.yaml  error_cards_missing_from_song.yaml  error_cards_no_files_at_all.yaml  error_cards_non_existent_source.yaml  error_cards_none_source.yaml  error_cards_too_many_source_files.yaml  error_faulty_cards.yaml  error_nocards.yaml  error_non_consecutive.yaml  error_none_value.yaml  error_not_numeric.yaml  error_source_none.yaml  error_too_many_cards.yaml  ok_1card.yaml  ok_4cards.yaml
tonuino_cards_manager/: __init__.py  _card.py  _clean.py  _config.py  _helpers.py  _qrcode.py  cover.py  main.py
