# SPDX-FileCopyrightText: 2024 Max Mehl <https://mehl.mx>
#
# SPDX-License-Identifier: GPL-3.0-only

[project]
name = "tonuino-cards-manager"
version = "0.4.2"
description = "Manage Tonuino RFID and SD cards by one configuration file. Easy, lightweight and feature-rich"
authors = [{ name = "Max Mehl", email = "mail@mehl.mx" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "GPL-3.0-only"
keywords = [
    "tonuino",
    "management",
    "automation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mutagen>=1.47.0,<2",
    "pyyaml>=6.0.3,<7",
    "qrcode>=8.2,<9",
    "wand>=0.7.0,<0.8",
    "jsonschema>=4.25.1,<5",
    "reportlab>=4.4.4,<5",
]

[project.urls]
Repository = "https://github.com/mxmehl/tonuino-cards-manager"

[project.scripts]
tonuino-cards-manager = "tonuino_cards_manager.main:main"
tonuino-cover-converter = "tonuino_cards_manager.cover:main"

[dependency-groups]
dev = [
    "types-qrcode>=8.2.0.20260408,<9",
    "pytest>=9.0.0,<10",
    "pytest-cov>=7.0.0,<8",
    "h11>=0.16.0,<0.17",
    "reuse>=6.2.0,<7",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["tonuino_cards_manager"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

# FORMATTING and LINTING settings
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T",
    "FBT",
    "LOG015",
    "COM812",
    "ERA001",
    "S310",
    "D205",
    "D212",
    "PTH123",
]
[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "PLR", "PT011", "ANN001", "ANN201", "ANN002"]
[tool.ruff.lint.pydocstyle]
convention = "google"

# TY settings
[tool.ty.src]
include = ["tonuino_cards_manager"]
